# libballistics

./: .gitignore  CMakeLists.txt  README.md  Readme.txt  _angle.c  _atmosphere.c  _retard.c  _retrieve.c  _solve.c  _windage.c  _zero.c  angle.c  atmosphere.c  ballistics.c  ballistics.h  example.c  pbr.c  retard.c  retrieve.c  solve.c  windage.c  zero.c
include/: ballistics.h  dragfunction.h  pbr.h
include/ballistics/: angle.h  atmosphere.h  ballistics.h  constants.h  drag.h  pbr.h  windage.h
test/: CMakeLists.txt  ballistics_check.cpp  pbr_check.cpp
